--- a/verification.html
+++ b/verification.html
@@ -86,6 +86,43 @@
       font-weight: bold;
       margin-top: 15px;
     }
+       form {
+    background-color: #ffffff; 
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid #000000;
+  border-radius: 8px;
+  width: 320px;
+  box-shadow: 4px 4px #000;
+  margin: 0 auto;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  color: #000000;
+  text-align: left;
+  text-shadow: 1px 1px #ffffff;
+  width: 100%;
+}
+
+button {
+  background-color: #132797;
+  color: #fffefe;
+  border: 2px solid #000000;
+  padding: 12px;
+  width: 100%;
+  cursor: pointer;
+  font-family: 'Press Start 2P', monospace;
+  font-size: 0.9em;
+  text-shadow: 1px 1px #000;
+}
+
+button:hover {
+  background-color: #f7f7f7;
+}
   </style>
 </head>
 <body>
