--- a/trainer_selection.html
+++ b/trainer_selection.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>TRAINER SELECTION</h1>
-     <a href="admin.html" class="back-button">Back</a>
+     <a href="index.html" class="back-button">Back</a>
     <div class="selection-group">
     <button onclick="location.href='trainer_guides.html'">Trainer Guides</button>
     <button onclick="location.href='trainor_schedule.html'">Trainor Schedule</button>
