--- a/trainer_selection.html
+++ b/trainer_selection.html
@@ -6,7 +6,23 @@
 </head>
 <body>
     <h1>TRAINER SELECTION</h1>
-     <a href="index.html" class="back-button">Back</a>
+     <a href="index.html" 
+   style="position: absolute; 
+          top: 20px; 
+          right: 20px; 
+          background-color: red; 
+          color: white; 
+          padding: 10px 16px; 
+          text-decoration: none; 
+          font-weight: bold; 
+          border-radius: 5px; 
+          border: none; 
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+          transition: background-color 0.3s ease;"
+   onmouseover="this.style.backgroundColor='darkred'" 
+   onmouseout="this.style.backgroundColor='red'">
+   Back
+</a>
     <div class="selection-group">
     <button onclick="location.href='trainer_guides.html'">Trainer Guides</button>
     <button onclick="location.href='trainor_schedule.html'">Trainor Schedule</button>
