--- a/planning.html
+++ b/planning.html
@@ -74,7 +74,23 @@
 </head>
 <body>
   <h1>Training Planning</h1>
-
+<a href="index.html" 
+   style="position: absolute; 
+          top: 20px; 
+          right: 20px; 
+          background-color: red; 
+          color: white; 
+          padding: 10px 16px; 
+          text-decoration: none; 
+          font-weight: bold; 
+          border-radius: 5px; 
+          border: none; 
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+          transition: background-color 0.3s ease;"
+   onmouseover="this.style.backgroundColor='darkred'" 
+   onmouseout="this.style.backgroundColor='red'">
+   Back
+</a>
   <div class="illustration">
      <img src="mission.png" alt="Planning Illustration">
     <p><strong>Plan your training efficiently by selecting the right methods and identifying key needs.</strong></p>
