--- a/deployment.html
+++ b/deployment.html
@@ -89,7 +89,23 @@
   <div class="container">
     <h1>🚀 Deployment & Go-Live Dashboard</h1>
     <p style="text-align:center;">Monitoring ESS system performance and ensuring a smooth launch experience for all employees.</p>
-
+<a href="index.html" 
+   style="position: absolute; 
+          top: 20px; 
+          right: 20px; 
+          background-color: red; 
+          color: white; 
+          padding: 10px 16px; 
+          text-decoration: none; 
+          font-weight: bold; 
+          border-radius: 5px; 
+          border: none; 
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+          transition: background-color 0.3s ease;"
+   onmouseover="this.style.backgroundColor='darkred'" 
+   onmouseout="this.style.backgroundColor='red'">
+   Back
+</a>
     <div class="announcement">
       <strong>📢 Go-Live Announcement:</strong> The Employee Self-Service (ESS) portal is now officially live! All employees can now access the platform using their company credentials.
     </div>
