--- a/project_management.html
+++ b/project_management.html
@@ -1,6 +1,4 @@
-<?php
-// project_management.php
-?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -77,7 +75,23 @@
 <body>
   <div class="container">
     <h1>📁 Project Management</h1>
-
+<a href="index.html" 
+   style="position: absolute; 
+          top: 20px; 
+          right: 20px; 
+          background-color: red; 
+          color: white; 
+          padding: 10px 16px; 
+          text-decoration: none; 
+          font-weight: bold; 
+          border-radius: 5px; 
+          border: none; 
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+          transition: background-color 0.3s ease;"
+   onmouseover="this.style.backgroundColor='darkred'" 
+   onmouseout="this.style.backgroundColor='red'">
+   Back
+</a>
     <section>
       <h2>📅 Project Planning</h2>
       <form>
