--- a/systemsettings.html
+++ b/systemsettings.html
@@ -88,6 +88,23 @@
 
 <div class="settings-container">
   <h2>System Settings</h2>
+  <a href="index.html" 
+   style="position: absolute; 
+          top: 20px; 
+          right: 20px; 
+          background-color: red; 
+          color: white; 
+          padding: 10px 16px; 
+          text-decoration: none; 
+          font-weight: bold; 
+          border-radius: 5px; 
+          border: none; 
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+          transition: background-color 0.3s ease;"
+   onmouseover="this.style.backgroundColor='darkred'" 
+   onmouseout="this.style.backgroundColor='red'">
+   Back
+</a>
   <form id="moduleForm">
     <div class="form-group">
       <label for="moduleName">Module Name</label>
