--- a/trainor_schedule.html
+++ b/trainor_schedule.html
@@ -26,7 +26,7 @@
     #appointment-form {
   width: 90%;
   max-width: 600px;
-  margin: 60px auto 20px auto; /* Added margin-top: 60px */
+  margin: 60px auto 20px auto; 
   background-color: white;
   padding: 20px;
   border-radius: 10px;
@@ -200,7 +200,7 @@ h1 {
   cursor: pointer;
 }
     .available {
-  background-color: Green; 
+  background-color: light Green; 
   font-weight: bold;
 }
 
