--- a/trainor_schedule.html
+++ b/trainor_schedule.html
@@ -200,7 +200,7 @@ h1 {
   cursor: pointer;
 }
     .available {
-  background-color: light Green; 
+  background-color: lavander; 
   font-weight: bold;
 }
 
