--- a/trainer_guides.html
+++ b/trainer_guides.html
@@ -1,6 +1,4 @@
-<?php
-// trainer_guide.php
-?>
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,6 +15,23 @@
   </div>
   <div class="content">
     <h2>📘 Trainer Guide</h2>
+     <a href="trainer_selection.html" 
+   style="position: absolute; 
+          top: 20px; 
+          right: 20px; 
+          background-color: red; 
+          color: white; 
+          padding: 10px 16px; 
+          text-decoration: none; 
+          font-weight: bold; 
+          border-radius: 5px; 
+          border: none; 
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+          transition: background-color 0.3s ease;"
+   onmouseover="this.style.backgroundColor='darkred'" 
+   onmouseout="this.style.backgroundColor='red'">
+   Back
+</a>
     <p>
       Welcome to the WorkBreak Trainer Guide. This guide covers everything a trainer needs to know:
       <ul>
