--- a/competency_tracking.html
+++ b/competency_tracking.html
@@ -254,16 +254,97 @@
       </form>
 
       <table id="statusTable">
-        <thead>
-          <tr>
-            <th>Employee Name</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
+  <thead>
+    <tr>
+      <th>Employee Name</th>
+      <th>Status</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Lias Vance</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Seraphina Bellweather</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Jasper Thorne</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Luna Dubois</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Caleb Sterling</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Aurora Finch</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Atticus Blackwood</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Willow Hayes</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Silas Ramsey</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+    <tr>
+      <td>Juniper Klein</td>
+      <td>New</td>
+      <td>
+        <button class="edit-btn" onclick="editStatus(this)">Edit</button>
+        <button class="delete-btn" onclick="deleteStatus(this)">Delete</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
+
 
     <div class="filter-section">
       <label for="filterCompetency">Filter by Competency:</label>
