--- a/monitoring.html
+++ b/monitoring.html
@@ -89,7 +89,7 @@
     
     <div class="form-section">
       <h3>Customer Information</h3>
-      <label for="customerName">Name of Customer:</label>
+      <label for="customerName">Name of Candidate:</label>
       <input type="text" id="customerName" name="customerName" required>
     </div>
 
