--- a/monitoring.html
+++ b/monitoring.html
@@ -88,7 +88,7 @@
   <form id="monitoringForm">
     
     <div class="form-section">
-      <h3>Customer Information</h3>
+      <h3>Candidate Information</h3>
       <label for="customerName">Name of Candidate:</label>
       <input type="text" id="customerName" name="customerName" required>
     </div>
