--- a/monitoring.html
+++ b/monitoring.html
@@ -156,6 +156,11 @@
   </form>
 </div>
 
+   <button onclick="window.location.href='http://localhost/HR1/orientaion.html'">Go to Orientation & Training</button>
+    <p>Click the button above to go to the Orientation & Monitoring page.</p>
+        </div>
+    </div>
+</div>
 <script>
   document.getElementById('monitoringForm').addEventListener('submit', function(event) {
     event.preventDefault();
