--- a/monitoring.html
+++ b/monitoring.html
@@ -62,6 +62,9 @@
     button:hover {
       background-color: #001f4d;
     }
+    p {
+          text-align: center;
+        }
   </style>
 </head>
 <body>
